# simple-linux-debugger

./: .gitignore  CMakeLists.txt  README.md  app  linenoise.cpp  main.cpp
include/: breakpoint.hpp  debugger.hpp  registers.hpp
tests/: app  break  break.cpp  break.dmp  steps  steps.dmp  vars  vars.cpp  vars.dmp
